--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,11 +1,15 @@
+<div class="P_Tour">
+
+
 <p id="notice"><%= notice %></p>
+<div class="A_H1">
 
-<h1>Cities</h1>
+<h1>Самые популярные города</h1>
 
+</div>
 <table>
   <thead>
     <tr>
-      <th>Name</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,9 +18,8 @@
     <% @cities.each do |city| %>
       <tr>
         <td><%= city.name %></td>
-        <td><%= link_to 'Show', city %></td>
-        <td><%= link_to 'Edit', edit_city_path(city) %></td>
-        <td><%= link_to 'Destroy', city, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Смотреть маршруты', city %></td>
+
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +27,6 @@
 
 <br>
 
-<%= link_to 'New City', new_city_path %>
+
+
+</div>
