--- a/app/views/cities/show.html.erb
+++ b/app/views/cities/show.html.erb
@@ -1,9 +1,11 @@
+<div class="P_Tour">
+
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
+<div class="A_H1">
+
   <%= @city.name %>
-</p>
+</div>
 
 <p>
   <strong>Маршруты:</strong>
@@ -15,5 +17,5 @@
 <% end %>
 
 
-<%= link_to 'Edit', edit_city_path(@city) %> |
-<%= link_to 'Back', cities_path %>
+
+</div>
