--- a/app/views/points/_form.html.erb
+++ b/app/views/points/_form.html.erb
@@ -1,3 +1,5 @@
+<div class="P_Tour">
+
 <%= form_with(model: point, local: true) do |form| %>
   <% if point.errors.any? %>
     <div id="error_explanation">
@@ -20,3 +22,7 @@
     <%= form.submit %>
   </div>
 <% end %>
+
+
+
+</div>
