--- a/app/views/points/index.html.erb
+++ b/app/views/points/index.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
+<div class="P_Tour">
 
 <h1>Points</h1>
 
@@ -25,3 +26,6 @@
 <br>
 
 <%= link_to 'New Point', new_point_path %>
+
+
+</div>
