--- a/app/views/points/show.html.erb
+++ b/app/views/points/show.html.erb
@@ -1,9 +1,12 @@
 <p id="notice"><%= notice %></p>
+<div class="P_Tour">
 
 <p>
   <strong>Address:</strong>
   <%= @point.address %>
 </p>
 
-<%= link_to 'Edit', edit_point_path(@point) %> |
-<%= link_to 'Back', points_path %>
+<%= link_to 'Редактировать', edit_point_path(@point) %> |
+<%= link_to 'Назад', points_path %>
+
+</div>
