--- a/app/views/favourites/index.html.erb
+++ b/app/views/favourites/index.html.erb
@@ -1,11 +1,15 @@
 <p id="notice"><%= notice %></p>
+<div class="P_Tour">
+  <div class="A_H1">
 
-<h1>Favourites</h1>
+
+Мои закладки
+  </div>
 
 <table>
   <thead>
     <tr>
-      <th>User</th>
+      <!-- <th>User</th> -->
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,10 +17,7 @@
   <tbody>
     <% @favourites.each do |favourite| %>
       <tr>
-        <td><%= favourite.user_id %></td>
-        <td><%= link_to 'Show', favourite %></td>
-        <td><%= link_to 'Edit', edit_favourite_path(favourite) %></td>
-        <td><%= link_to 'Destroy', favourite, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to favourite.tour.title, "tours/#{favourite.tour.id}"  %></td>
       </tr>
     <% end %>
   </tbody>
@@ -24,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New Favourite', new_favourite_path %>
+</div>
