--- a/app/views/favourites/show.html.erb
+++ b/app/views/favourites/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<div class="P_Tour">
 <p>
   <strong>User:</strong>
   <%= @favourite.user_id %>
@@ -7,3 +7,5 @@
 
 <%= link_to 'Edit', edit_favourite_path(@favourite) %> |
 <%= link_to 'Back', favourites_path %>
+
+</div>
