--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -1,3 +1,5 @@
+<div class="P_Tour">
+
 <p id="notice"><%= notice %></p>
 
 <h1>Guides</h1>
@@ -5,11 +7,6 @@
 <table>
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Avatar link</th>
-      <th>Contact number</th>
-
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -32,3 +29,5 @@
 <br>
 
 <%= link_to 'New Guide', new_guide_path %>
+
+</div>
