--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,15 +1,13 @@
 <p id="notice"><%= notice %></p>
+<div class="P_Tour">
+  <div class="A_H1">
+    <h1>Лучшие места</h1>
+  </div>
 
-<h1>Places</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Tour</th>
-      <th>Point</th>
-      <th>Guide</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -17,14 +15,8 @@
   <tbody>
     <% @places.each do |place| %>
       <tr>
-        <td><%= place.title %></td>
-        <td><%= place.description %></td>
-        <td><%= place.tour_id %></td>
-        <td><%= place.point_id %></td>
-        <td><%= place.guide_id %></td>
-        <td><%= link_to 'Show', place %></td>
-        <td><%= link_to 'Edit', edit_place_path(place) %></td>
-        <td><%= link_to 'Destroy', place, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to "#{place.title}", place %></td>
+        <td><%= link_to 'Ред.', edit_place_path(place) %></td>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +24,5 @@
 
 <br>
 
-<%= link_to 'New Place', new_place_path %>
+
+</div>
