--- a/app/views/tours/index.html.erb
+++ b/app/views/tours/index.html.erb
@@ -1,31 +1,51 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Tours</h1>
+<div class="P_MainTours">
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Avatar link</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
+<h1 class="A_H1">Подборка: лучшие маршруты по миру</h1>
+<div class="O_Tours">
+
+
+
     <% @tours.each do |tour| %>
-      <tr>
-        <td><%= tour.title %></td>
-        <td><%= tour.description %></td>
-        <td><%= tour.avatar_link %></td>
-        <td><%= link_to 'Show', tour %></td>
-        <td><%= link_to 'Edit', edit_tour_path(tour) %></td>
-        <td><%= link_to 'Destroy', tour, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+    <%= link_to tour do%>
+    <div class="Please">
+
+        <div class="M_TourCard">
+          <div class="">
+              <%= image_tag(tour.image, style:'width:403px; height:237px;') if tour.image.attached?%>
+          </div>
+          <div class="">
+            <h2 class="A_H2"><%= tour.title %></h2>
+          </div>
+          <div class="">
+            <h2 class="A_P1"><%= tour.description %></h2>
+          </div>
+          <div class="">
+            <td><%= link_to 'Нравится', tours_add_to_favourite_path(tour_id: tour.id), method: :post, class: "A_P1" %> |</td>
+            <td><%= link_to 'Редактировать', edit_tour_path(tour), class: "A_P1" %></td>
+
+          </div>
+
+
+        <% end %>
+        <% end %>
+
+
+
+      </div>
+
+    </div>
+
+
+
+
 
 <br>
 
-<%= link_to 'New Tour', new_tour_path %>
+<%#= link_to 'New Service', new_service_path %>
+</div>
+</div>
+
+<br>
