--- a/app/views/guides/new.html.erb
+++ b/app/views/guides/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Guide</h1>
+<h1>New User</h1>
 
-<%= render 'form', guide: @guide %>
+<%= render 'form', user: @user %>
 
-<%= link_to 'Back', guides_path %>
+<%= link_to 'Back', users_path %>
