--- a/app/views/tours/show.html.erb
+++ b/app/views/tours/show.html.erb
@@ -32,7 +32,7 @@
 
 <div class="A_P1">
   <strong>Гид:</strong>
-  <%= link_to @tour.guide.name, guide_path(@tour.guide) %>
+  <%= link_to @tour.user.name, user_path(@tour.user) %>
 </div>
 <div class="A_H3">
 <h3>Места этого маршрута:</h3>
