--- a/app/views/guides/edit.html.erb
+++ b/app/views/guides/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Guide</h1>
+<h1>Editing User</h1>
 
-<%= render 'form', guide: @guide %>
+<%= render 'form', user: @user %>
 
-<%= link_to 'Show', @guide %> |
-<%= link_to 'Back', guides_path %>
+<%= link_to 'Show', @user %> |
+<%= link_to 'Back', users_path %>
