--- a/app/views/guides/index.html.erb
+++ b/app/views/guides/index.html.erb
@@ -2,7 +2,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>Guides</h1>
+<h1>Users</h1>
 
 <table>
   <thead>
@@ -12,15 +12,15 @@
   </thead>
 
   <tbody>
-    <% @guides.each do |guide| %>
+    <% @users.each do |user| %>
       <tr>
-        <td><%= guide.name %></td>
-        <td><%= guide.description %></td>
-        <td><%= guide.avatar_link %></td>
-        <td><%= guide.contact_number %></td>
-        <td><%= link_to 'Show', guide %></td>
-        <td><%= link_to 'Edit', edit_guide_path(guide) %></td>
-        <td><%= link_to 'Destroy', guide, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= user.name %></td>
+        <td><%= user.description %></td>
+        <td><%= user.avatar_link %></td>
+        <td><%= user.contact_number %></td>
+        <td><%= link_to 'Show', user %></td>
+        <td><%= link_to 'Edit', edit_user_path(user) %></td>
+        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -28,6 +28,6 @@
 
 <br>
 
-<%= link_to 'New Guide', new_guide_path %>
+<%= link_to 'New User', new_user_path %>
 
 </div>
