--- a/app/assets/stylesheets/components/atoms/A_H1.scss
+++ b/app/assets/stylesheets/components/atoms/A_H1.scss
@@ -1,5 +1,5 @@
 .A_H1 {
-  font-family: "Manrope-ExtraBold", sans-serif;
-  font-size: 36px;
+  font-family: "Manrope-SemiBold", sans-serif;
+  font-size: 28px;
   margin-bottom: 24px;
 }
