--- a/app/assets/stylesheets/components/atoms/A_P1.scss
+++ b/app/assets/stylesheets/components/atoms/A_P1.scss
@@ -3,5 +3,5 @@
   margin-bottom: 30px;
   line-height: 140%;
   width: 600px;
-  font-family: "Manrope-SemiBold", sans-serif;
+  font-family: "Manrope-Regular", sans-serif;
 }
