--- a/app/assets/stylesheets/components/pages/P_Tour.scss
+++ b/app/assets/stylesheets/components/pages/P_Tour.scss
@@ -1,5 +1,5 @@
 .P_Tour {
-  margin-top: 135px;
+  // margin-top: 135px;
   margin-left: 65px;
   display: flex;
   flex-direction: column;
@@ -7,7 +7,7 @@
   font-family: "Manrope-SemiBold", sans-serif;
 
   .A_H2, .A_H1 {
-    margin-top: 30px;
+    margin-top: 5px;
   }
 
   .field {
@@ -16,6 +16,6 @@
 
   a {
     font-family: "Manrope-SemiBold", sans-serif;
-    color: #FF4E4E;
+    color: #6900AA;
   }
 }
