--- a/app/assets/stylesheets/components/quarks/Q_Logo.scss
+++ b/app/assets/stylesheets/components/quarks/Q_Logo.scss
@@ -1,6 +1,6 @@
 .Q_Logo {
-   width: 37px;
-   height: 32px;
-   background: url('logos.svg');
-   
+   width: 46px;
+   height: 46px;
+   background: url('Frame5.svg');
+
 }
