--- a/app/assets/stylesheets/components/atoms/A_H2.scss
+++ b/app/assets/stylesheets/components/atoms/A_H2.scss
@@ -1,5 +1,5 @@
 .A_H2 {
-  font-family: "Manrope-ExtraBold", sans-serif;
-  font-size: 28px;;
+  font-family: "Manrope-SemiBold", sans-serif;
+  font-size: 24px;;
   margin-top: 30px;
 }
