--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,25 +16,21 @@
 
 
       <%= link_to tours_path do %>
-  <div class="Q_Logo"></div>
+<div class="Q_Logo"></div>
 <% end %>
-<%= link_to 'На главную', tours_path %>
+<%= link_to 'Jay', tours_path, class: "A_Link"%>
 </div>
 
-<%= link_to 'Все города', cities_path %>
 
-        <%= link_to 'Все места', places_path %>
-        <%= link_to 'Закладки', favourites_path %>
-        <%= link_to 'Создать маршрут', new_tour_path, class: "A_Link"%>
+<div class="M_Menu">
 
-        <% if guide_signed_in? %>
-          <%= link_to('Выйти', destroy_guide_session_path, method: :delete) %>
 
-        <% else %>
+<%= link_to 'Весь мир', cities_path %>
+        <%= link_to 'Исследуй', places_path %>
+        <%= link_to 'Создать маршрут', new_tour_path%>
+        </div>
+        <%= link_to 'Профиль', guides_path%>
 
-         <%= link_to('Войти', new_guide_session_path) %>
-
-        <% end %>
 
     </menu>
 
