--- a/app/views/tours/index.html.erb
+++ b/app/views/tours/index.html.erb
@@ -3,18 +3,20 @@
 <div class="P_MainTours">
 
 
-<h1 class="A_H1">Подборка: лучшие маршруты по миру</h1>
+<h1 class="A_H1">Топ маршруты по миру</h1>
+
+<th colspan="3"></th>
 <div class="O_Tours">
 
 
 
     <% @tours.each do |tour| %>
+        <div class="Please">
     <%= link_to tour do%>
-    <div class="Please">
 
         <div class="M_TourCard">
           <div class="">
-              <%= image_tag(tour.image, style:'width:403px; height:237px;') if tour.image.attached?%>
+              <%= image_tag(tour.image, style:'width:500px; height:300px;') if tour.image.attached?%>
           </div>
           <div class="">
             <h2 class="A_H2"><%= tour.title %></h2>
@@ -27,25 +29,20 @@
             <td><%= link_to 'Редактировать', edit_tour_path(tour), class: "A_P1" %></td>
 
           </div>
-
-
-        <% end %>
-        <% end %>
-
-
-
+        </div>
       </div>
 
-    </div>
+
+        <% end %>
+        <% end %>
 
 
 
 
 
-<br>
-
-<%#= link_to 'New Service', new_service_path %>
-</div>
-</div>
 
 <br>
+
+
+</div>
+</div>
