--- a/app/views/cities/_form.html.erb
+++ b/app/views/cities/_form.html.erb
@@ -18,6 +18,11 @@
     <%= form.text_field :name %>
   </div>
 
+  <div class="field">
+    <%= form.label :cover %>
+    <%= form.file_field :cover %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
