--- a/app/views/guides/_form.html.erb
+++ b/app/views/guides/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :avatar_link %>
-    <%= form.text_field :avatar_link %>
+    <%= form.label :avatar %>
+    <%= form.file_field :avatar %>
   </div>
 
   <div class="field">
