--- a/app/assets/stylesheets/components/atoms/A_H3.scss
+++ b/app/assets/stylesheets/components/atoms/A_H3.scss
@@ -1,5 +1,5 @@
 .A_H3 {
-  font-family: "Manrope-ExtraBold", sans-serif;
-  font-size: 20px;;
+  font-family: "Manrope-SemiBold", sans-serif;
+  font-size: 32px;;
   margin-top: 30px;
 }
