--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,16 +1,10 @@
 <p id="notice"><%= notice %></p>
-<div class="P_Tour">
+<div class="P_MainTours">
   <div class="A_H1">
     <h1>Лучшие места</h1>
   </div>
 
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <th colspan="3"></th>
 
   <tbody>
     <% @places.each do |place| %>
@@ -20,7 +14,7 @@
       </tr>
     <% end %>
   </tbody>
-</table>
+
 
 <br>
 
